--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "next": "latest",
+    "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-responsive-carousel": "^3.2.23"
